# nix-place

./: CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix
fragments/: pleme-gems.yaml  pleme-workspace.yaml
src/: main.rs  model.rs  render.rs  sync.rs  validate.rs
