[package]
name = "nix-place"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Managed Nix flake placement — merge, sync, diff, clean"
repository = "https://github.com/pleme-io/nix-place"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
sha2 = "0.10"
tempfile = "3"
rnix = "0.11"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
